--- a/loginpage.html
+++ b/loginpage.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -6,38 +5,29 @@
     <title>kans</title>
     <link rel="stylesheet" href="loginpage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
       <form action="">
         <h1>Login</h1>
         <div class="input-box">
-          <input type="username" placeholder="username" required>
-
+          <input type="text" placeholder="Username" required>
         </div>
         <p></p>
-
         <div class="input-box">
-          <input type="password" placeholder="password" required>
-          </div>
-
-          <div class="remember-forgot">
-            <label><input type="checkbox">Remember me</label>
-            <a href="#">Forgot password</a>
-          </div>
-
-          <button type="summit" class="btn"="button">Login</button>
-
-          <div class="register-Link">
-            <p>New Account?<a href="#">Register here</a></p>
-
-          </div>
-
+          <input type="password" placeholder="Password" required>
+        </div>
+        <div class="remember-forgot">
+          <label><input type="checkbox">Remember me</label>
+          <a href="#">Forgot password</a>
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <div class="register-Link">
+          <p>New Account? <a href="#">Register here</a></p>
+        </div>
       </form>
-
     </div>
-
   </body>
 </html>
